--- a/scss/index.scss
+++ b/scss/index.scss
@@ -34,9 +34,9 @@ body {
       }
     }
     .text {
-      font-size: 10vw;
+      font-size: 13vw;
       &::before {
-        content: "Mpiliardaki?";
+        content: "gym?";
       }
     }
     .text3,
